# excel-get-print-area

./: README.md  main.py  pyproject.toml
src/: excel_processor.py
