[project]
name = "excel-get-print-area"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hira koichiro", email = "koichiro.hira@geniee.co.jp" }
]
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/excel_get_print_area"]
